--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,9 @@ dependencies {
     compile 'com.android.support:support-v4:+'
     implementation project(':slidingmenu')
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.xhb:xbanner:1.2.2'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 
 }
