--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 
 }
