--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <!-- 用于申请获取蓝牙信息进行室内定位 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".App"
@@ -72,11 +75,13 @@
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="eab5d80b8e0c0dc2eb5332a86bf4a6fa"></meta-data>
+            android:value="eab5d80b8e0c0dc2eb5332a86bf4a6fa" />
 
         <service android:name="com.amap.api.location.APSService" />
-
-        <activity android:name=".activitybao.ShipinActivity"></activity>
+        <activity android:name=".activitybao.ShipinActivity" />
+        <activity android:name=".activitybao.PbVideoActivity" />
+        <activity android:name=".activitybao.Pbvideo1Activity" />
+        <activity android:name=".activitybao.GuanzhuActivity"></activity>
     </application>
 
 </manifest>
