--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,116 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.lenovo.bount.newsquarter"> <!-- //友盟统计 -->
-<uses-sdk android:minSdkVersion="8" />
+    package="com.lenovo.bount.newsquarter"> <!-- //友盟统计 -->
+    <uses-sdk android:minSdkVersion="8" />
 
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
-<meta-data
+    <!-- Required -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+
+
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+
+    <!--
+    <meta-data
     android:name="UMENG_APPKEY"
     android:value="59a944215312dd99420009a7"></meta-data>
+    -->
 
-<uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
-<!-- iBeancon功能所需权限 -->
-;
-<uses-permission android:name="android.permission.BLUETOOTH" />
-<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-<!-- 个推3.0电子围栏功能所需权限 -->
-
-<meta-data
-    android:name="UMENG_APPKEY"
-    android:value="5a0a9488a40fa371720000c4" />
-
-<!-- //高德地图 -->
-<!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
-<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-<!-- 用于申请调用A-GPS模块 -->
-<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-<!-- 用于申请获取蓝牙信息进行室内定位 -->
-<uses-permission android:name="android.permission.BLUETOOTH" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.CAMERA" />
-
-<application
-    android:name=".App"
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity android:name=".activitybao.Qidong2Activity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity android:name=".activitybao.MainActivity" />
-
-    <service
-        android:name=".DemoPushService"
-        android:exported="true"
-        android:label="PushService"
-        android:process=":pushservice" />
-    <service android:name=".DemoIntentService" />
-
-    <activity
-        android:name=".activitybao.LoginActivity"
-        android:theme="@style/AppTheme" />
-    <activity
-        android:name=".activitybao.Login2Activity"
-        android:theme="@style/AppTheme" />
-    <activity android:name=".activitybao.RegisterActivity" />
-    <activity android:name=".activitybao.BianjiActivity" />
-    <activity android:name=".activitybao.PublishJokeActivity" />
-    <activity android:name=".activitybao.ShezhiActivity" />
-    <activity android:name=".activitybao.Activity" />
-    <activity android:name=".activitybao.UserActivity" />
-    <activity android:name=".GaodeMapActivity" />
+    <!-- iBeancon功能所需权限 -->
+    ;
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <!-- 个推3.0电子围栏功能所需权限 -->
 
     <meta-data
-        android:name="com.amap.api.v2.apikey"
-        android:value="eab5d80b8e0c0dc2eb5332a86bf4a6fa" />
+        android:name="UMENG_APPKEY"
+        android:value="5a0a9488a40fa371720000c4" />
 
-    <service android:name="com.amap.api.location.APSService" />
+    <!-- //高德地图 -->
+    <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 用于申请调用A-GPS模块 -->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <!-- 用于申请获取蓝牙信息进行室内定位 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <activity android:name=".activitybao.ShipinActivity" />
-    <activity android:name=".activitybao.PbVideoActivity" />
-    <activity android:name=".activitybao.Pbvideo1Activity" />
-    <activity android:name=".activitybao.GuanzhuActivity" />
-    <activity android:name=".activitybao.ShipinXqActivity" />
-    <activity android:name=".activitybao.SousuoActivity" />
-    <activity android:name=".activitybao.ProductionActivity" />
-    <activity android:name=".activitybao.MyguanzhuActivity"></activity>
-    <activity
-        android:name="com.umeng.qq.tencent.AuthActivity"
-        android:launchMode="singleTask"
-        android:noHistory="true">
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
 
-            <data android:scheme="tencent100424468" />
-        </intent-filter>
-    </activity>
-    <activity
-        android:name="com.umeng.qq.tencent.AssistActivity"
-        android:screenOrientation="portrait"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar"
-        android:configChanges="orientation|keyboardHidden|screenSize" />
-    <activity android:name=".activitybao.QQsanActivity"></activity>
-</application>
+
+
+    <application
+        android:name=".App"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".activitybao.Qidong2Activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activitybao.MainActivity" />
+
+        <service
+            android:name=".DemoPushService"
+            android:exported="true"
+            android:label="PushService"
+            android:process=":pushservice" />
+        <service android:name=".DemoIntentService" />
+
+        <activity
+            android:name=".activitybao.LoginActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activitybao.Login2Activity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activitybao.RegisterActivity" />
+        <activity android:name=".activitybao.BianjiActivity" />
+        <activity android:name=".activitybao.PublishJokeActivity" />
+        <activity android:name=".activitybao.ShezhiActivity" />
+        <activity android:name=".activitybao.Activity" />
+        <activity android:name=".activitybao.UserActivity" />
+        <activity android:name=".GaodeMapActivity" />
+
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="eab5d80b8e0c0dc2eb5332a86bf4a6fa" />
+
+        <service android:name="com.amap.api.location.APSService" />
+
+        <activity android:name=".activitybao.ShipinActivity" />
+        <activity android:name=".activitybao.PbVideoActivity" />
+        <activity android:name=".activitybao.Pbvideo1Activity" />
+        <activity android:name=".activitybao.GuanzhuActivity" />
+        <activity android:name=".activitybao.ShipinXqActivity" />
+        <activity android:name=".activitybao.SousuoActivity" />
+        <activity android:name=".activitybao.ProductionActivity" />
+        <activity android:name=".activitybao.MyguanzhuActivity" />
+        <activity
+            android:name="com.umeng.qq.tencent.AuthActivity"
+            android:launchMode="singleTask"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="tencent100424468" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.umeng.qq.tencent.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activitybao.QQsanActivity" />
+        <activity android:name=".activitybao.MyShoucangActivity"></activity>
+
+        <!-- 设置环信应用的AppKey -->
+        <meta-data android:name="EASEMOB_APPKEY"  android:value="1108171219178183#oneclick-huanxin" />
+        <!-- 声明SDK所需的service SDK核心功能-->
+        <service android:name="com.hyphenate.chat.EMChatService" android:exported="true"/>
+        <service android:name="com.hyphenate.chat.EMJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"
+            />
+        <!-- 声明SDK所需的receiver -->
+        <receiver android:name="com.hyphenate.chat.EMMonitorReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+                <data android:scheme="package"/>
+            </intent-filter>
+            <!-- 可选filter -->
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+    </application>
 
 </manifest>
